[gd_scene load_steps=3 format=3 uid="uid://djff1xhowq75x"]

[ext_resource type="Script" path="res://ptog_152a.gd" id="1_amus7"]
[ext_resource type="Theme" uid="uid://cv1o3wmjapddp" path="res://BigFont.tres" id="2_nii67"]

[node name="prog_152a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_amus7")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 36.0
offset_right = 1119.0
offset_bottom = 504.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 523.0
offset_right = 302.0
offset_bottom = 631.0
theme = ExtResource("2_nii67")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 525.0
offset_right = 700.0
offset_bottom = 633.0
theme = ExtResource("2_nii67")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 523.0
offset_right = 1120.0
offset_bottom = 631.0
theme = ExtResource("2_nii67")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
